fixed styling and alignment issues

--- a/src/app/question-form/question-form.component.scss
+++ b/src/app/question-form/question-form.component.scss
@@ -1,14 +1,14 @@
 @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 
-// .answerChoices {
-
-// }
 .radio-group {
   display: flex;
   flex-direction: column;
-  margin: 15px 0;
+  margin: 10px 0px;
 }
 
 .example-radio-button {
   margin: 5px;
+}
+.quiz {
+  margin-left: 20px;
 }
