--- a/src/app/questions/questions.component.scss
+++ b/src/app/questions/questions.component.scss
@@ -1,1 +1,5 @@
 @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
+
+.btn {
+  margin-left: 20px;
+}
