--- a/src/app/results/results.component.scss
+++ b/src/app/results/results.component.scss
@@ -1,10 +1,21 @@
 @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 
+.results {
+  margin-left: 20px;
+}
 .guide {
-  background-color: #ff0000;
+  color: #ff0000;
   text-emphasis: bold;
   text-transform: uppercase;
+  padding-left: 5px;
+}
+.answer {
+  margin: 10px 0px;
 }
 .white {
   color: #ffffff;
+  text-decoration: none;
+}
+.btn {
+  margin-top: 15px;
 }
