--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -9,7 +9,9 @@
 }
 .tool-bar-container {
   margin-bottom: 20px;
+  text-align: center;
 }
 .white {
   color: #ffffff;
+  text-decoration: none;
 }
